# Changelog

## 0.7.1 - 2025-11-02

### Added

- New `--state-file` CLI option to override `SCRUBEXIF_STATE`
- Documentation split: short README + full `doc/DETAILS.md`
- Added summary tests validating state-file override logic
- Added `SCRUBEXIF_AUTOBUILD` explanation + behavior matrix

### Improved

- Default read-only container path resolution for state file
- Test suite reliability for auto-mode stability logic
- Soak-test framework (not run by default)
- Log messages for state disable, override, and fallback

### Fixed

- `run_container()` regression from state-file refactor
- Stability path resolution in `main()` flow
- Minor path sanitization and quoting issues
- README truncation on Docker Hub due to length

### Notes

- This release tightens container behavior and test rigor
- Full documentation moved to `doc/DETAILS.md` for clarity
- Recommended upgrade for automation users

## 0.7.0 — 2025-11-01

### Added

- Full container-integration test suite using shared `_docker.py` harness
- Soak test script with real JPEG inputs to validate long-run stability
- Automatic “final flush” option for soak scenario to clear pending files
- Persistent stability-window behavior across test and soak runs
- Support for mounting processed and errors dirs in tests

### Improved

- Auto-mode: Stability logic hardened for CI and real ingest pipelines
- Duplicate handling tests now cover delete and move paths
- Container log level made explicit in tests (`--log-level debug|info`)
- Deterministic temp state path in CI for reproducibility
- Makefile test defaults exclude soak/nightly paths via pytest markers
- Developer Docker build workflows with stable tag strategy
- Introduced centralized Docker run flags via `_docker.py`

### Fixed

- Tests now use real JPEGs instead of synthetic 4-byte placeholders
- Stability-window false positives during soak runs
- Marker confusion: nightly/soak now explicitly applied at file scope
- Input file lingering after scrub in edge cases